k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-flask
  namespace: student-python-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-flask
  template:
    metadata:
      labels:
        app: python-flask
    spec:
      containers:
        - name: python-flask
          image: __IMAGE_REF__
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
