k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-flask
  namespace: student-python-lab
spec:
  selector:
    app: python-flask
  ports:
    - name: http
      port: 8080
      targetPort: 8080
