k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-flask
  namespace: student-python-lab
spec:
  ingressClassName: nginx
  rules:
    - host: __APP_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-flask
                port:
                  number: 8080
